moved height and width to css

--- a/webfund/disappearingninja/index.html
+++ b/webfund/disappearingninja/index.html
@@ -13,8 +13,6 @@
                 $("button.restore").click(function(){
                     $("img.ninjabox").show();
                 });
-
-
             });
         </script>
 
@@ -22,14 +20,14 @@
     </head>
     <body>
         <div id="container">
-            <img src="img/ninja.jpg" alt="ninja" height="300" width="300" class="ninjabox">
-            <img src="img/ninja.jpg" alt="ninja" height="300" width="300" class="ninjabox">
-            <img src="img/ninja.jpg" alt="ninja" height="300" width="300" class="ninjabox">
-            <img src="img/ninja.jpg" alt="ninja" height="300" width="300" class="ninjabox">
-            <img src="img/ninja.jpg" alt="ninja" height="300" width="300" class="ninjabox">
-            <img src="img/ninja.jpg" alt="ninja" height="300" width="300" class="ninjabox">
-            <img src="img/ninja.jpg" alt="ninja" height="300" width="300" class="ninjabox">
-            <img src="img/ninja.jpg" alt="ninja" height="300" width="300" class="ninjabox">
+            <img src="img/ninja.jpg" alt="ninja" class="ninjabox">
+            <img src="img/ninja.jpg" alt="ninja" class="ninjabox">
+            <img src="img/ninja.jpg" alt="ninja" class="ninjabox">
+            <img src="img/ninja.jpg" alt="ninja" class="ninjabox">
+            <img src="img/ninja.jpg" alt="ninja" class="ninjabox">
+            <img src="img/ninja.jpg" alt="ninja" class="ninjabox">
+            <img src="img/ninja.jpg" alt="ninja" class="ninjabox">
+            <img src="img/ninja.jpg" alt="ninja" class="ninjabox">
         </div>
         <button class="restore">Restore</button>
     </body>
